# SQLite_Clone

./: CMakeLists.txt  input_buffer.c  input_processing.c  input_processing.h  main.c  row.c  row.h  table.c
include/sqlite/: input_buffer.h  input_processing.h  table.h
src/: input_buffer.c  input_processing.c  main.c  row.c  table.c
tests/: CMakeLists.txt
tests/integration/: test_db.rb
tests/unit/: CMakeLists.txt  test_input_buffer.cpp  test_input_processing.cpp  test_row.cpp  test_table.cpp
